@@ -14,7 +14,7 @@
       <li><a href="basic.html">Basic example</a></li>
       <li><a href="graph-types.html">Different graph types</a></li>
       <li><a href="setting-options.html">Setting various options</a> and <a href="annotating.html">annotating a chart</a></li>
-      <li><a href="ajax.html">Updating graphs with AJAX</a></li>
+      <li><a href="ajax.html">Updating graphs with AJAX</a> and <a href="realtime.html">real-time updates</a></li>
     </ul>
 
     <p>Being interactive:</p>
